--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "postinstall": "cd backend && npm install && cd ../frontend && npm install",
-    "build": "cd frontend && npm run build",
-    "start":  "cd backend && npm start"
+    "postinstall": "cd backend && npm install && cd ../frontend && npm install"
   },
   "repository": {
     "type": "git",
